初步完成饼图

--- a/CustomViews/app/src/main/res/values/colors.xml
+++ b/CustomViews/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
 
     <color name="black">#000000</color>
     <color name="gray">#aeabab</color>
+    <color name="deep_gray">#434141</color>
 </resources>
