初步完成悬浮按钮

--- a/CustomViews/app/src/main/res/values/colors.xml
+++ b/CustomViews/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="black">#000000</color>
     <color name="gray">#aeabab</color>
     <color name="deep_gray">#434141</color>
+    <color name="blue">#4294f2</color>
 </resources>
