--- a/CustomViews/app/src/main/res/layout/fragment_page.xml
+++ b/CustomViews/app/src/main/res/layout/fragment_page.xml
@@ -6,7 +6,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="300dp">
+        android:layout_height="match_parent">
 
         <ViewStub
             android:id="@+id/practiceStub"
