--- a/CustomViews/app/src/main/res/values/styles.xml
+++ b/CustomViews/app/src/main/res/values/styles.xml
@@ -11,13 +11,15 @@
     <declare-styleable name="Histogram">
         <attr name="histogram_textSize" format="dimension"></attr>
         <attr name="histogram_textColor" format="color"></attr>
+        <attr name="histogram_scaleTextSize" format="dimension"></attr>
+        <attr name="histogram_scaleTextColor" format="color"></attr>
     </declare-styleable>
 
-    <!--<declare-styleable name="PieChart">-->
-        <!--<attr name="pie_textSize" format="dimension"></attr>-->
-        <!--<attr name="pie_textColor" format="color"></attr>-->
-        <!--<attr name="pie_lineScale" format="float"></attr>-->
-        <!--<attr name="pie_lineColor" format="color"></attr>-->
-    <!--</declare-styleable>-->
+    <declare-styleable name="PieChart">
+        <attr name="pie_textSize" format="dimension"></attr>
+        <attr name="pie_textColor" format="color"></attr>
+        <attr name="pie_lineRatio" format="float"></attr>
+        <attr name="pie_lineColor" format="color"></attr>
+    </declare-styleable>
 
 </resources>
