--- a/CustomViews/app/src/main/res/layout/fragment_view_pie_chart.xml
+++ b/CustomViews/app/src/main/res/layout/fragment_view_pie_chart.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.xianglei.customviews.view.PieChart
         android:id="@+id/pie_chart"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:background="@color/deep_gray"></com.xianglei.customviews.view.PieChart>
+        android:background="@color/deep_gray"
+        app:pie_textColor="@color/white"
+        app:pie_lineColor="@color/white"></com.xianglei.customviews.view.PieChart>
 
 </LinearLayout>
