直方图可隐藏刻度

--- a/CustomViews/app/src/main/res/layout/fragment_view_histogram.xml
+++ b/CustomViews/app/src/main/res/layout/fragment_view_histogram.xml
@@ -7,8 +7,11 @@
     <com.xianglei.customviews.view.Histogram
         android:id="@+id/histogram"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="300dp"
         android:padding="30dp"
-        app:histogram_textSize="10dp"></com.xianglei.customviews.view.Histogram>
+        app:histogram_textSize="12dp"
+        app:histogram_textColor="@color/gray"
+        app:histogram_scaleTextSize="10dp"
+        app:histogram_scaleTextColor="@color/blue"></com.xianglei.customviews.view.Histogram>
 
 </LinearLayout>
