优化悬浮拖拽按钮

--- a/CustomViews/app/src/main/res/layout/fragment_view_float.xml
+++ b/CustomViews/app/src/main/res/layout/fragment_view_float.xml
@@ -6,6 +6,7 @@
     <com.xianglei.customviews.view.FloatView
         android:id="@+id/view_float"
         android:layout_height="50dp"
-        android:layout_width="50dp"></com.xianglei.customviews.view.FloatView>
+        android:layout_width="50dp">
+    </com.xianglei.customviews.view.FloatView>
 
 </LinearLayout>
