--- a/CustomViews/app/src/main/res/layout/fragment_view_clock.xml
+++ b/CustomViews/app/src/main/res/layout/fragment_view_clock.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:gravity="center">
 
     <com.xianglei.customviews.view.MyClockView
         android:id="@+id/custom_clock"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:clock_hour_pointer_color="@color/blue"
         app:clock_minute_pointer_out_length="20dp"
         app:clock_text_size="15sp"
