--- a/CustomViews/app/src/main/res/layout/fragment_view_period.xml
+++ b/CustomViews/app/src/main/res/layout/fragment_view_period.xml
@@ -9,7 +9,6 @@
         android:id="@+id/progress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:background="@color/deep_gray"/>
+        android:layout_marginTop="20dp" />
 
 </LinearLayout>
